[tool.poetry]
name = "mp3Organizer"
version = "0.1.0"
description = ""
authors = ["Petteri Suominen <petteri.suominen12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
eyed3 = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
